// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip. Snapshots. should match default props 1`] = `
Object {
  "backgroundColor": "#D4D4D5",
}
`;

exports[`Chip. Snapshots. should match when a different background color is provided 1`] = `
<View
  style={
    Object {
      "paddingBottom": 5,
      "paddingRight": 5,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 12.5,
          "height": 25,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "fontSize": 11,
          "paddingHorizontal": 10,
          "textTransform": "uppercase",
        }
      }
    >
      Happy
    </Text>
  </View>
</View>
`;

exports[`Chip. Snapshots. should match with default props provided 1`] = `
<View
  style={
    Object {
      "paddingBottom": 5,
      "paddingRight": 5,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 12.5,
          "height": 25,
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#D4D4D5",
        },
      ]
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "fontSize": 11,
          "paddingHorizontal": 10,
          "textTransform": "uppercase",
        }
      }
    >
      Happy
    </Text>
  </View>
</View>
`;
